--- a/style.css
+++ b/style.css
@@ -3,11 +3,10 @@
  Theme URI:    https://github.com/samwilson/wp-samwilson.git
  Description:  Sam's theme
  Author:       Sam Wilson
- Author URI:   http://samwilson.id.au/
+ Author URI:   https://samwilson.id.au/
  Version:      15.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
- Tags:         green, two-columns, right-sidebar
  Text Domain:  samwilson
 */
 
